# ne-enclave

./: .cla-assistant.yaml  .gitignore  CLA.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  NOTICE  README.md  SECURITY.md  TRADEMARK.md  clippy.toml  deny.toml  rust-toolchain.toml
.cla/: corporate-cla.txt  individual-cla.txt
.github/workflows/: ci.yml  cla.yml  release.yml
bench/: Cargo.toml  README.md
bench/src/: cli.rs  client.rs  csv.rs  lib.rs  main.rs  manifest.rs  stats.rs
bench/src/benchmarks/: boot_storm.rs  cold_start.rs  density.rs  exec.rs  mod.rs  teardown.rs
cla-signatures/version1/: cla.json
crates/ne/: Cargo.toml  README.md
crates/ne-api/: Cargo.toml
crates/ne-api/src/: auth.rs  core.rs  lib.rs  rest.rs  server.rs  supervisor_client.rs  tls.rs
crates/ne-api/tests/: grpc_e2e.rs  rest.rs  tls.rs
crates/ne-attestation/: Cargo.toml
crates/ne-attestation/certs/: README.md
crates/ne-attestation/src/: lib.rs  snp_report.rs  snp_source.rs  tpm_attest.rs  vcek.rs
crates/ne-dns-filter/: Cargo.toml
crates/ne-dns-filter/src/: lib.rs
crates/ne-dns-filter/tests/: udp_loop.rs
crates/ne-e2e/: Cargo.toml
crates/ne-e2e/fixtures/: sandbox-policy.rego
crates/ne-e2e/src/: lib.rs
crates/ne-e2e/tests/: attestation.rs  create_race.rs  firecracker_host_timeout.rs  firecracker_roundtrip.rs  fork_concurrent.rs  ingress.rs  live_snapshot.rs  r1_single_cvm_direct.rs  sev_snp.rs  sev_snp_azure.rs  snapshot_no_hol.rs  snapshot_restore.rs  warm_pool.rs
crates/ne-enclave-wasm/: Cargo.toml
crates/ne-enclave-wasm/src/: lib.rs
crates/ne-enclave-wasm/tests/: native_equiv.rs
crates/ne-guest-agent/: Cargo.toml
crates/ne-guest-agent/src/: files.rs  identity.rs  linux_main.rs  main.rs
crates/ne-image/: Cargo.toml
crates/ne-image/src/: main.rs
crates/ne-ingress/: Cargo.toml
crates/ne-ingress/src/: host.rs  lib.rs  registry.rs  router.rs  tls.rs
crates/ne-privacy-router/: Cargo.toml
crates/ne-privacy-router/src/: lib.rs  policy_loader.rs  proxy.rs
crates/ne-privacy-router/tests/: proxy_e2e.rs
crates/ne-protocol/: Cargo.toml  build.rs
crates/ne-protocol/src/: attestation.rs  audit.rs  grpc.rs  guest.rs  lib.rs  profile.rs  snapshot.rs  supervisor.rs
crates/ne-seal/: Cargo.toml
crates/ne-seal/src/: crypto.rs  gate.rs  kek.rs  key_release.rs  key_release_cp.rs  lib.rs  orchestration.rs  types.rs
crates/ne-supervisor/: Cargo.toml
crates/ne-supervisor/src/: attestation_factory.rs  audit.rs  command.rs  firecracker.rs  image.rs  ipc.rs  lib.rs  network.rs  openshell.rs  pool.rs  seal.rs  serve.rs  signing.rs  snapshot.rs  util.rs  workspace.rs
crates/ne-supervisor/tests/: dns_filter_e2e.rs  fc_api_timeout.rs  firecracker_lifecycle.rs  ipc_roundtrip.rs  network_setup_e2e.rs  run_command_e2e.rs  timeout_propagation.rs
crates/ne/src/: apikey.rs  attestation_cli.rs  audit_cli.rs  cli.rs  lib.rs  main.rs  snapshot_cli.rs  tls_cli.rs
crates/ne/src/install/: image.rs  layout.rs  mod.rs  preflight.rs  render.rs  run.rs
crates/ne/templates/: ne-api.service.tmpl  ne-enclave.conf.tmpl  ne-enclave.env.tmpl  ne-supervisor.service.tmpl  openshell-policy.yaml  privacy-policy.yaml.tmpl
crates/ne/tests/: install_fakeroot.rs  release_urls.rs  snapshot_verify.rs
deploy/: README.md  install.sh  ne-api.service  ne-supervisor.service  release-components.json  smoke-confidential-azure.sh  smoke-install.sh  smoke-sdk-python.py  smoke-sdk-typescript.mjs  test-release-contract.sh
docs/: BREAKING-CHANGES.md  CAPABILITIES.md  THREAT-MODEL.md
docs/superpowers/plans/: 2026-07-11-install-prefix-v0.1.3.md  2026-07-11-secure-image-staging.md
docs/superpowers/specs/: 2026-07-11-install-prefix-v0.1.3-design.md  2026-07-11-secure-image-staging-design.md
images/buildroot/: README.md
proto/ne/runtime/v1/: runtime.proto
scripts/: check-advisory-exceptions.sh
sdk/python/: README.md  pyproject.toml
sdk/python-langchain/: README.md  pyproject.toml
sdk/python-langchain/examples/: quickstart.py
sdk/python-langchain/src/ne_langchain/: __init__.py  errors.py  tools.py  workspace.py
sdk/python-langchain/tests/: conftest.py  test_errors.py  test_package.py  test_tools.py  test_workspace.py
sdk/python/scripts/: codegen.sh
sdk/python/src/ne/: __init__.py  client.py
sdk/python/src/ne/runtime/v1/: runtime_pb2.py  runtime_pb2_grpc.py
sdk/python/tests/: test_client.py
sdk/typescript/: .gitignore  README.md  biome.json  codegen.sh  package-lock.json  package.json  vitest.config.ts
sdk/typescript-mastra/: README.md  biome.json  package-lock.json  package.json  tsconfig.json  tsup.config.ts  vitest.config.ts
sdk/typescript-mastra/coverage/: errors.ts.html  index.html  tools.ts.html  workspace.ts.html
sdk/typescript-mastra/examples/: quickstart.ts
sdk/typescript-mastra/src/: errors.ts  index.ts  tools.ts  workspace.ts
sdk/typescript-mastra/tests/: errors.test.ts  package.test.ts  tools.test.ts  workspace.test.ts
sdk/typescript-mastra/tests/helpers/: fake-client.ts
sdk/typescript/src/: client.ts  index.ts
sdk/typescript/tests/: client.test.ts
sdk/typescript/tests/helpers/: fake-server.ts
