# NeuronEdge Enclave runtime — Cargo workspace.
#
# Apache-2.0 in perpetuity (PRD §9.1, STANDARDS §8). The BSL-1.1 control
# plane lives in a separate repository and shares only `ne-protocol`.

[workspace]
resolver = "3"
members = [
  "crates/ne",
  "crates/ne-protocol",
  "crates/ne-attestation",
  "crates/ne-seal",
  "crates/ne-supervisor",
  "crates/ne-guest-agent",
  "crates/ne-image",
  "crates/ne-api",
  "crates/ne-dns-filter",
  "crates/ne-privacy-router",
  "crates/ne-e2e",
  "crates/ne-ingress",
  "crates/ne-enclave-wasm",
  "bench",
]
# Phase boundaries protected by RFC (ARCH §17.6 service inventory lock).

[workspace.package]
version = "0.1.1"
edition = "2024"
rust-version = "1.88"
license = "Apache-2.0"
authors = ["Infrastacks LLC <eng@infrastacks.com>"]
repository = "https://github.com/Infrastacks/ne-enclave"
homepage = "https://neuronedge.ai"

[workspace.dependencies]
# Async runtime.
tokio = { version = "1.43", features = ["full"] }
tokio-vsock = "0.6"

# HTTP client (control-plane key-release client in ne-seal; spec §6.2).
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }

# Serialization.
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bytes = "1"

# Errors. thiserror for library crates; anyhow only at binary entry points
# (STANDARDS §2.1).
thiserror = "1"
anyhow = "1"

# Structured logging.
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# CLI.
clap = { version = "4.5", features = ["derive", "env"] }

# Linux platform (consumer crates gate behind cfg(target_os = "linux")).
nix = { version = "0.29", features = ["fs", "hostname", "sched", "user", "mount", "process", "signal", "socket", "ioctl"] }
caps = "0.5"

# Protobuf / gRPC.
prost = "0.13"
prost-types = "0.13"
tonic = "0.12"
tonic-build = "0.12"
# Vendored protoc binary so the dev loop doesn't depend on a system
# `protoc` install (no `brew install protobuf` step on macOS).
protoc-bin-vendored = "3"

# Audit chain.
ed25519-dalek = { version = "2", features = ["rand_core"] }
sha2 = "0.10"
base64 = "0.22"
hex = "0.4"
ulid = "1"
rand = "0.8"

# SEV-SNP VCEK/ARK verification (P-384 ECDSA + X.509 chain walk).
p384 = { version = "0.13", features = ["ecdsa"] }
ecdsa = { version = "0.16", features = ["verifying"] }
x509-cert = { version = "0.2", default-features = false, features = ["pem"] }
# `tls` (rustls + webpki-roots) so `KdsVcekFetcher` can reach HTTPS AMD KDS.
# `default-features = false` keeps the crate Mac-pure / network-free unless the
# `kds` feature is on; no native-tls / openssl pulled in.
ureq = { version = "2", default-features = false, features = ["tls"] }
# Pure-Rust RSA verify (RSASSA-PSS-SHA384) for the real AMD ARK/ASK, which are
# RSA-4096. Verify-only: no `getrandom`/signing pulled into the verify path
# (Mac-native + the wasm re-vendor in Task 2). `ring` stays banned.
rsa = { version = "0.9", default-features = false }

# Sealed snapshots: AES-256-GCM + HKDF KEK + attestation-gated DEK release.
aes-gcm = "0.10"
hkdf = "0.12"
zeroize = { version = "1", features = ["zeroize_derive"] }

# WASM seam (`ne-enclave-wasm`) — the authoritative server-side attestation
# gate + DEK wrap/unwrap, compiled for the BSL control-plane Worker.
wasm-bindgen = "0.2"
# getrandom `custom` backend: registered as a no-op/panic shim under wasm32 so
# transitive getrandom (via ed25519-dalek/rand) compiles for the wasm target.
# The seam is pure (verify) / host-nonce (wrap) — no code path reaches RNG.
getrandom = { version = "0.2", default-features = false, features = ["custom"] }

# TLS (rustls, ring provider pinned — aws-lc-rs is musl-hostile and the
# release-build CI job compiles x86_64-unknown-linux-musl).
rustls = { version = "0.23", default-features = false, features = ["ring", "logging", "std", "tls12"] }
rustls-pemfile = "2"
tokio-rustls = { version = "0.26", default-features = false, features = ["ring", "tls12"] }
axum-server = { version = "0.7", default-features = false, features = ["tls-rustls-no-provider"] }
rcgen = { version = "0.13", default-features = false, features = ["ring", "pem"] }

# systemd readiness notification (Type=notify). Pure Rust, no libsystemd link.
sd-notify = "0.4"

# Test-only.
tempfile = "3"

[workspace.lints.rust]
# Forbid unsafe at the workspace floor. Individual crates that need unsafe
# (e.g. the vsock guest agent) relax with #[allow(unsafe_code)] plus a
# // SAFETY: comment per STANDARDS §2.1.
unsafe_code = "deny"
rust_2018_idioms = { level = "warn", priority = -1 }
missing_docs = "warn"
trivial_casts = "warn"
trivial_numeric_casts = "warn"
unused_lifetimes = "warn"
unused_qualifications = "warn"
unreachable_pub = "warn"
unused_must_use = "deny"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
# STANDARDS §2.1 — no unwrap/expect outside tests and startup; we surface
# these via lint and rely on test-only and `cfg(test)` overrides.
unwrap_used = "warn"
expect_used = "warn"
panic = "warn"
todo = "warn"
unimplemented = "warn"
print_stdout = "warn"
print_stderr = "warn"

# Pragmatic allows. Mirrors OpenShell to keep the inherited code path quiet
# when we integrate it later.
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
significant_drop_tightening = "allow"
missing_const_for_fn = "allow"
too_many_lines = "allow"
needless_pass_by_value = "allow"
ref_option = "allow"
missing_fields_in_debug = "allow"
# Stylistic lints introduced in clippy versions newer than our MSRV (1.88).
# The trait-object coercion casts and doc-paragraph length are pre-existing
# intentional patterns; allowed to keep the gate green across toolchain drift.
too_long_first_doc_paragraph = "allow"
bind_instead_of_map = "allow"

[profile.release]
strip = true
lto = "thin"
codegen-units = 1

[profile.dev]
debug = 1
