[package]
name = "ne-bench"
description = "Public reproducible benchmark harness for the NeuronEdge Enclave runtime (ARCH §15)."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[lints]
workspace = true

[[bin]]
name = "ne-bench"
path = "src/main.rs"

[dependencies]
ne-protocol = { path = "../crates/ne-protocol", features = ["grpc"] }
tokio = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
