[package]
name = "ne-api"
description = "NeuronEdge Enclave Runtime API daemon — gRPC mediation layer between SDK callers and the privileged ne-supervisor."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[lints]
workspace = true

[lib]
name = "ne_api"
path = "src/lib.rs"


[dependencies]
ne-attestation = { path = "../ne-attestation" }
ne-protocol = { path = "../ne-protocol", features = ["grpc"] }

anyhow = { workspace = true }
axum = "0.7"
base64 = { workspace = true }
clap = { workspace = true }
hex = { workspace = true }
prost = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tonic = { workspace = true, features = ["tls"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
rustls = { workspace = true }
rustls-pemfile = { workspace = true }
axum-server = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tower = { version = "0.5", features = ["util"] }
tokio-rustls = { workspace = true }
rcgen = { workspace = true }
