[package]
name = "ne-attestation"
description = "NeuronEdge Enclave attestation: provider trait, evidence envelope, software-fallback provider, verifier."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[lints]
workspace = true

[features]
default = []
# Live AMD KDS HTTPS VCEK fetch (`KdsVcekFetcher`). Off by default to keep the
# verification crate Mac-pure / network-free; the supervisor turns it on.
kds = ["dep:ureq"]
# Synthetic SEV-SNP cert/report material (`vcek::test_support`) for cross-crate
# integration tests (e.g. `ne-seal`'s gate orchestration). Off by default — no
# production impact: it only pulls `rcgen` + P-384 signing into the build when a
# downstream crate's tests opt in.
test-support = ["dep:rcgen", "dep:rand", "p384/pkcs8", "ecdsa/signing", "rsa/getrandom"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
ed25519-dalek = { workspace = true }
thiserror = { workspace = true }
base64 = { workspace = true }
hex = { workspace = true }
p384 = { workspace = true }
ecdsa = { workspace = true }
x509-cert = { workspace = true }
# Pure-Rust RSA-4096 RSASSA-PSS-SHA384 verify for the real AMD ARK/ASK.
# In `rsa` 0.9 the `pss` module and `pkcs1` dep are non-optional (always on);
# the only optional feature we enable is `sha2` (the SHA-384 digest). Verify-
# only: rsa's `getrandom` feature stays OFF, so no `getrandom` is pulled into
# the verify path (Mac-native + the wasm re-vendor in Task 2). `ring` stays
# banned.
rsa = { workspace = true, features = ["sha2"] }
ureq = { workspace = true, optional = true }
# Synthetic-material deps for `test-support` (cross-crate integration tests).
rand = { workspace = true, optional = true }
rcgen = { workspace = true, optional = true }

# Linux-only: the /dev/sev-guest SNP_GET_REPORT ioctl (`IoctlSnpReportSource`).
# Target-specific so the crate stays Mac-pure / off-silicon off-Linux.
[target.'cfg(target_os = "linux")'.dependencies]
nix = { workspace = true }

[dev-dependencies]
# Enable our own `test-support` feature so the in-crate `#[cfg(test)]` unit
# tests compile the shared synthetic-material module (`vcek::test_support`).
ne-attestation = { path = ".", features = ["test-support"] }
