[package]
name = "ne-dns-filter"
description = "Per-workspace DNS forwarder that filters queries against a hostname allowlist."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[lints]
workspace = true

[lib]
name = "ne_dns_filter"
path = "src/lib.rs"


[dependencies]
tokio = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde_json = { workspace = true }
