[package]
name = "ne-e2e"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
publish = false

[lib]
path = "src/lib.rs"

# Enables the r1_single_cvm_direct e2e (the OpenShell sandbox surface in
# ne-supervisor). Off by default so the standard e2e suite is unchanged; turned
# on for the B round-trip on the DCasv5:
#   cargo test -p ne-e2e --features confidential-cvm --test r1_single_cvm_direct \
#     -- --ignored --nocapture
[features]
default = []
confidential-cvm = ["ne-supervisor/confidential-cvm"]

[dependencies]
sha2 = { workspace = true }
hex = { workspace = true }
ne-supervisor = { path = "../ne-supervisor" }

[dev-dependencies]
# `kds` turns on ne-attestation's live AMD KDS VCEK fetcher (`KdsVcekFetcher`),
# used by the sev_snp.rs e2e's real-silicon SEV-SNP provider. `ne-seal` (its
# default `orchestration` feature) supplies seal/unseal + the CP key-release
# client. The sev_snp.rs body is `#![cfg(target_os = "linux")]`, so on macOS
# these are built-but-unreferenced (the test is an empty crate off-Linux).
ne-attestation = { path = "../ne-attestation", features = ["kds"] }
ne-seal = { path = "../ne-seal" }
ne-ingress = { path = "../ne-ingress" }
ne-protocol = { path = "../ne-protocol" }
ed25519-dalek = { workspace = true }
base64 = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tempfile = { workspace = true }
