[package]
name = "ne-enclave-wasm"
description = "WASM seam over ne-seal verify + kek for the control-plane Worker (Apache-2.0)."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[lints]
workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
ne-seal = { path = "../ne-seal", default-features = false }
ne-attestation = { path = "../ne-attestation" }
wasm-bindgen = { workspace = true }
getrandom = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
base64 = { workspace = true }
hex = { workspace = true }

[dev-dependencies]
ed25519-dalek = { workspace = true }

# wasm-opt in the bundled wasm-pack defaults to disabling bulk-memory ops,
# which the Rust 1.95 wasm output now emits. Enable it explicitly (mirrors the
# `redaction-engine` crate's profile).
[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Oz", "--enable-bulk-memory"]
