# SPDX-FileCopyrightText: 2026 Infrastacks LLC
# SPDX-License-Identifier: Apache-2.0
#
# NeuronEdge Enclave workspace-egress privacy router.
#
# Wraps the NVIDIA OpenShell PII detection engine for use in the
# host-side payload-scanning proxy. The crate publishes both a library
# (`ne_privacy_router`) — which downstream wedges depend on, so the
# `openshell-pii` SHA pin stays a single-file change here — and a
# binary (`ne-privacy-router`) that the supervisor will spawn per
# workspace in Wedge 5.3.

[package]
name = "ne-privacy-router"
description = "NeuronEdge Enclave workspace-egress privacy router — PII/PHI scanning and redaction."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[lib]
name = "ne_privacy_router"
path = "src/lib.rs"


[dependencies]
# Fork SHA pin lives here only; bump in this file when we ship upstream
# changes to the Infrastacks/OpenShell PII engine.
openshell-pii = { git = "https://github.com/Infrastacks/OpenShell.git", rev = "70328542941838612a75b62c3cc365e01594c0c3" }

tokio = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
bytes = { workspace = true }

# HTTP server + client. Per-crate deps (no other workspace crate runs an
# HTTP server today); versions track the OpenShell pii-proxy reference.
hyper = { version = "1.6", features = ["server", "client", "http1"] }
hyper-util = { version = "0.1", features = ["tokio", "server-auto", "client", "client-legacy", "http1"] }
http = "1.2"
http-body-util = "0.1"

# YAML policy loader.
serde_yaml = "0.9"

# JSON encoder for the per-decision audit lines the supervisor relays
# into the signed chain. Workspace-pinned version.
serde_json = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }

[lints]
workspace = true
