[package]
name = "ne-seal"
description = "NeuronEdge Enclave sealed snapshots: AES-256-GCM encryption + attestation-gated DEK release (runtime side)."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[lints]
workspace = true

[features]
# Default-on feature gating the tokio-backed seal/unseal orchestration. The
# wasm seam (`ne-enclave-wasm`) builds `ne-seal` with `default-features = false`
# so the wasm32 target never links tokio (mio is wasm32-hostile) nor reqwest
# (its wasm/http backend is dead weight on the wasm artifact); native consumers
# (`ne-supervisor`) take the default and are unaffected.
default = ["orchestration"]
orchestration = ["dep:tokio", "dep:reqwest"]

[dependencies]
ne-protocol = { path = "../ne-protocol" }
ne-attestation = { path = "../ne-attestation" }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
ed25519-dalek = { workspace = true }
thiserror = { workspace = true }
base64 = { workspace = true }
hex = { workspace = true }
aes-gcm = { workspace = true }
hkdf = { workspace = true }
zeroize = { workspace = true }
rand = { workspace = true }
reqwest = { workspace = true, optional = true }
tokio = { workspace = true, optional = true }

[dev-dependencies]
tempfile = { workspace = true }
# Enable `ne-attestation`'s synthetic-material module (`vcek::test_support`) so
# the orchestration tests can exercise the SevSnp gate against a synthetic
# AMD-rooted chain. Feature is off for non-test builds — no prod impact.
ne-attestation = { path = "../ne-attestation", features = ["test-support"] }
