[package]
name = "ne-enclave"
description = "NeuronEdge Enclave single fused runtime binary (serve/install/doctor/image subcommands)."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords = ["enclave", "microvm", "firecracker", "confidential-computing", "runtime"]
categories = ["command-line-utilities", "virtualization"]
readme = "README.md"
documentation = "https://docs.rs/ne-enclave"

[lints]
workspace = true

[[bin]]
name = "nee"
path = "src/main.rs"

[lib]
name = "ne"
path = "src/lib.rs"

[features]
default = []
confidential-cvm = ["ne-supervisor/confidential-cvm"]

[dependencies]
ne-api = { path = "../ne-api" }
ne-supervisor = { path = "../ne-supervisor" }
ne-dns-filter = { path = "../ne-dns-filter" }
ne-privacy-router = { path = "../ne-privacy-router" }
ne-protocol = { path = "../ne-protocol", features = ["grpc"] }
tonic = { workspace = true }
serde_json = { workspace = true }

anyhow = { workspace = true }
base64 = { workspace = true }
clap = { workspace = true }
hex = { workspace = true }
nix = { workspace = true }
rand = { workspace = true }
rcgen = { workspace = true }
sha2 = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
ulid = { workspace = true }

[dev-dependencies]
ne-supervisor = { path = "../ne-supervisor" }
ne-protocol = { path = "../ne-protocol" }
ed25519-dalek = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true }
