[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "neuronedge-enclave-langchain"
version = "0.1.0"
description = "LangChain adapter for the NeuronEdge Enclave Runtime API."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "Mindpool, Inc.", email = "dev@mindpool.io" }]
keywords = [
    "langchain",
    "enclave",
    "firecracker",
    "microvm",
    "confidential-computing",
    "agent",
    "sandbox",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Typing :: Typed",
]
dependencies = [
    "neuronedge-enclave >=0.1.0,<2.0",
    "langchain-core >=0.3,<2.0",
]

[project.optional-dependencies]
dev = [
    "pytest >=8.0",
    "pytest-asyncio >=0.23",
    "ruff >=0.5",
]

[project.urls]
Homepage = "https://neuronedge.ai"
Repository = "https://github.com/Mindpool-Labs/ne-enclave"

[tool.hatch.build.targets.wheel]
packages = ["src/ne_langchain"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-local-folder = ["conftest"]
